--- a/VanillaJS/index.css
+++ b/VanillaJS/index.css
@@ -4,4 +4,12 @@ body{
 
 h1 {
     color:#34495e;
+    transition: color 0.5s ease-in-out;
+}
+
+.btn {
+    cursor: pointer;
+}
+.clicked{
+    color: #7f8c8d;
 }
